# pydraughts

./: .coveragerc  .gitignore  ImparaAI checkers LICENSE  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  code-cov.yml  codeql-analysis.yml  python-build.yml  tests.yml
draughts/: PDN.py  __init__.py  ballots.py  board.py  board_initializer.py  board_searcher.py  convert.py  engine.py  game.py  move.py  piece.py  svg.py  tournament.py
draughts/ballot_files/: 11_english.json  11_italian.json  150russian_and_brazilian.json  2move_english.json  3move_english.json  4move_english.json  5move_english.json  brazilian.json  russian.json
draughts/core/: board.py  board_initializer.py  board_searcher.py  game.py  move.py  piece.py  variant.py
draughts/engines/: __init__.py  checkerboard.py  dxp.py  hub.py
draughts/engines/checkerboard_extra/: engine_64.py  engine_client.py  engine_server.py  get_checker_board.py
draughts/engines/dxp_communication/: dxp_classes.py  dxp_communication.py  dxp_run.py
examples/: engine_pondering.py
other_licenses/: akalverboer DXC100_draughts_client LICENSE  fishnet LICENSE.txt
test_pydraughts/: conftest.py  test_ambiguous_moves.py  test_ballots.py  test_board.py  test_convert.py  test_dxp_communication.py  test_engines.py  test_game.py  test_move.py  test_pdn.py  test_piece.py  test_repr.py  test_svg.py  test_tournament.py  test_variants.py
