[metadata]
name = pydraughts
version = 0.5.0
author = AttackingOrDefending
description = A draughts library for Python with move generation, PDN reading and writing, engine communication and balloted openings
long_description = file: README.md
long_description_content_type = text/markdown
keywords = checkers, draughts, game, fen, pdn
url = https://github.com/AttackingOrDefending/pydraughts
project_urls =
    Bug Tracker = https://github.com/AttackingOrDefending/pydraughts/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Software Development :: Libraries :: Python Modules
license_files =
    LICENSE
    other_licenses/*

[options]
include_package_data = True
packages =
    draughts
    draughts.core
    draughts.engines
    draughts.engines.dxp_communication
    draughts.engines.checkerboard_extra
python_requires = >=3.8
install_requires =
    msl-loadlib==0.9.0
